crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__rootha_mastering_the_moment_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 260,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "At the beginning of combat on your turn, if you've cast an instant or sorcery spell this turn, create an X/X blue and red Elemental creature token with flying and haste, where X is the greatest mana value among instant and sorcery spells you've cast this turn."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "Phase",
            "partial_def": {
              "mode": "Phase",
              "execute": null,
              "valid_card": null,
              "origin": null,
              "destination": null,
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": "BeginCombat",
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": {
                "type": "OnlyDuringYourTurn"
              },
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 164,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "create an X/X blue and red Elemental creature token with flying and haste, where X is the greatest mana value among instant and sorcery spells you've cast this turn"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Token",
                        "name": "Elemental",
                        "power": {
                          "type": "Quantity",
                          "value": {
                            "type": "Ref",
                            "qty": {
                              "type": "PropertyAggregate",
                              "function": "Max",
                              "property": "ManaValue",
                              "source": {
                                "type": "TurnJournal",
                                "journal": {
                                  "type": "SpellsCast"
                                },
                                "scope": "Controller",
                                "filter": {
                                  "type": "Or",
                                  "filters": [
                                    {
                                      "type": "Typed",
                                      "type_filters": [
                                        "Instant"
                                      ],
                                      "controller": null,
                                      "properties": []
                                    },
                                    {
                                      "type": "Typed",
                                      "type_filters": [
                                        "Sorcery"
                                      ],
                                      "controller": null,
                                      "properties": []
                                    }
                                  ]
                                }
                              }
                            }
                          }
                        },
                        "toughness": {
                          "type": "Quantity",
                          "value": {
                            "type": "Ref",
                            "qty": {
                              "type": "PropertyAggregate",
                              "function": "Max",
                              "property": "ManaValue",
                              "source": {
                                "type": "TurnJournal",
                                "journal": {
                                  "type": "SpellsCast"
                                },
                                "scope": "Controller",
                                "filter": {
                                  "type": "Or",
                                  "filters": [
                                    {
                                      "type": "Typed",
                                      "type_filters": [
                                        "Instant"
                                      ],
                                      "controller": null,
                                      "properties": []
                                    },
                                    {
                                      "type": "Typed",
                                      "type_filters": [
                                        "Sorcery"
                                      ],
                                      "controller": null,
                                      "properties": []
                                    }
                                  ]
                                }
                              }
                            }
                          }
                        },
                        "types": [
                          "Creature",
                          "Elemental"
                        ],
                        "colors": [
                          "Blue",
                          "Red"
                        ],
                        "keywords": [
                          "Flying",
                          "Haste"
                        ],
                        "tapped": false,
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "owner": {
                          "type": "Controller"
                        },
                        "enters_attacking": false
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": "the greatest mana value among instant and sorcery spells you've cast this turn",
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": {
                "type": "QuantityComparison",
                "lhs": {
                  "type": "Ref",
                  "qty": {
                    "type": "SpellsCastThisTurn",
                    "scope": "Controller",
                    "filter": {
                      "type": "Or",
                      "filters": [
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Instant"
                          ],
                          "controller": null,
                          "properties": []
                        },
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Sorcery"
                          ],
                          "controller": null,
                          "properties": []
                        }
                      ]
                    }
                  }
                },
                "comparator": "GE",
                "rhs": {
                  "type": "Fixed",
                  "value": 1
                }
              },
              "trigger_subject": {
                "type": "Any"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "if you've cast an instant or sorcery spell this turn, create an x/x blue and red elemental creature token with flying and haste, where x is the greatest mana value among instant and sorcery spells you've cast this turn.",
              "relative_player_scope": null
            },
            "source_text": "At the beginning of combat on your turn, if you've cast an instant or sorcery spell this turn, create an X/X blue and red Elemental creature token with flying and haste, where X is the greatest mana value among instant and sorcery spells you've cast this turn.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "At the beginning of combat on your turn, if you've cast an instant or sorcery spell this turn, create an X/X blue and red Elemental creature token with flying and haste, where X is the greatest mana value among instant and sorcery spells you've cast this turn.",
  "card_name": "Rootha, Mastering the Moment"
}
