crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__serra_angel_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 6,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Flying"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Flying",
            "description": "Flying"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 7,
          "end_byte": 52,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Vigilance (Attacking doesn't cause ~ to tap.)"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Vigilance",
            "description": "Vigilance"
          },
          "min_x_value": 0
        }
      }
    }
  ],
  "source_text": "Flying\nVigilance (Attacking doesn't cause this creature to tap.)",
  "card_name": "Serra Angel"
}
