crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__short_sword_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 29,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equipped creature gets +1/+1."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "EquippedBy"
                }
              ]
            },
            "modifications": [
              {
                "type": "AddPower",
                "value": 1
              },
              {
                "type": "AddToughness",
                "value": 1
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Equipped creature gets +1/+1."
          },
          "source_text": "Equipped creature gets +1/+1.",
          "body_ir": null
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 30,
          "end_byte": 110,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equip {1} ({1}: Attach to target creature you control. Equip only as a sorcery.)"
      },
      "node": {
        "Spell": {
          "source_text": "Equip {1}",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 9,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Equip {1}"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Attach",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": "You",
                      "properties": []
                    },
                    "selection": {
                      "at_resolution": {}
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [],
                "generic": 1
              }
            },
            "activation_restrictions": [
              {
                "type": "AsSorcery"
              }
            ],
            "ability_tag": {
              "type": "Equip"
            },
            "description": "Equip {1}"
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Equipped creature gets +1/+1.\nEquip {1} ({1}: Attach to target creature you control. Equip only as a sorcery.)",
  "card_name": "Short Sword"
}
