crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__slippery_bogle_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 79,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Hexproof (~ can't be the target of spells or abilities your opponents control.)"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Hexproof",
            "description": "Hexproof"
          },
          "min_x_value": 0
        }
      }
    }
  ],
  "source_text": "Hexproof (This creature can't be the target of spells or abilities your opponents control.)",
  "card_name": "Slippery Bogle"
}
